--- a/buildSrc/src/main/resources/detekt/config/style.yml
+++ b/buildSrc/src/main/resources/detekt/config/style.yml
@@ -1,4 +1,4 @@
-# 2023/10/27
+# 2023/11/26
 
 style:
   active: true
@@ -88,18 +88,7 @@ style:
     active: true
     maxJumpCount: 1
   MagicNumber:
-    active: true
-    ignoreNumbers: ['-1', '0', '1', '2']
-    ignoreHashCodeFunction: false
-    ignorePropertyDeclaration: false
-    ignoreLocalVariableDeclaration: false
-    ignoreConstantDeclaration: true
-    ignoreCompanionObjectPropertyDeclaration: false
-    ignoreAnnotation: false
-    ignoreNamedArgument: false
-    ignoreEnums: false
-    ignoreRanges: false
-    ignoreExtensionFunctions: false
+    active: false # todo compose
   MandatoryBracesLoops:
     active: true
   MaxChainedCallsOnSameLine:
