--- a/buildSrc/src/main/resources/detekt/config/potential-bugs.yml
+++ b/buildSrc/src/main/resources/detekt/config/potential-bugs.yml
@@ -43,6 +43,7 @@ potential-bugs:
       java.lang.StringBuilder.append,
       kotlin.TODO,
       kotlin.also,
+      kotlin.checkNotNull,
       kotlin.collections.MutableList.add,
       kotlin.collections.MutableMap.remove,
       kotlin.collections.MutableSet.add,
