--- a/buildSrc/src/main/resources/detekt/config/test.yml
+++ b/buildSrc/src/main/resources/detekt/config/test.yml
@@ -1,4 +1,4 @@
-# 2023/11/04
+# 2023/11/26
 
 style:
   active: true
@@ -6,3 +6,8 @@ style:
     active: true
     comments: []
     allowedPatterns: ''
+
+complexity:
+  active: true
+  StringLiteralDuplication:
+    active: false
